examples/negative/type_invariants/cyclic_type_alias.kai
# Negative fixture (#520 / type system): two `type` aliases
# reference each other forming a cycle (`type A = B`,
# `type B = A`). The resolver must reject with a cyclic-alias
# diagnostic, not loop or stack-overflow.

type A = B
type B = A

fn main() : Int = 0
